--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,4 +1,4 @@
-# $Id: CHANGELOG,v 1.29 2003/10/03 06:19:06 jaco Exp $
+# $Id: CHANGELOG,v 1.30 2003/10/03 06:28:21 jaco Exp $
 
 * Fri, Oct 03, 2003, 0.5.6-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
@@ -17,6 +17,8 @@
         '--looptype' options)
       - Added an entry for the "keyb=<mapping>' isolinux boot
         option
+      - Added an entry for the full list of available keyboard
+        mappings and their descriptions
       - Added an QA for the creation of LSS images as used by
         the 'mklivecd --iso-bgimage' command
       - Added an QA for the Mandrake isolinux graphics extension
