--- a/mklivecd/FAQ
+++ b/mklivecd/FAQ
@@ -1,4 +1,4 @@
-# $Id: FAQ,v 1.9 2003/10/03 06:19:06 jaco Exp $
+# $Id: FAQ,v 1.10 2003/10/03 06:28:21 jaco Exp $
 
 Q: How do I create a tiny (truly minimal) bootable Mandrake
    LiveCD?
@@ -95,6 +95,106 @@ A: By default the script installs a keyboard layout for a 'us'
       specific keyboard layout, specify '--keyboard=<mapping>' on
       the mklivecd command-line to automatically add a default
       option to the isolinux configuration.
+
+
+Q: Ok, I know how to change the mapping, but what values are valid
+   for the 'mapping'?
+A: Here is a full list of the available keyboard mappings along
+   with their respective descriptions:
+
+   al              Albanian
+   am              Armenian (typewriter)
+   am_old          Armenian (old)
+   am_phonetic     Armenian (phonetic)
+   ar              Arabic
+   az              Azerbaidjani (latin)
+   be              Belgian
+   ben             Bengali
+   bg              Bulgarian (BDS)
+   bg_phonetic     Bulgarian (phonetic)
+   br              Brazilian (ABNT-2)
+   bs              Bosnian
+   by              Belarusian
+   ch_de           Swiss (German layout)
+   ch_fr           Swiss (French layout)
+   cz              Czech (QWERTZ)
+   cz_qwerty       Czech (QWERTY)
+   de              German
+   de_nodeadkeys   German (no dead keys)
+   dev             Devanagari
+   dk              Danish
+   dvorak          Dvorak (US)
+   dvorak_no       Dvorak (Norwegian)
+   dvorak_se       Dvorak (Swedish)
+   ee              Estonian
+   es              Spanish
+   fi              Finnish
+   fr              French
+   ge_la           Georgian ("Latin" layout)
+   ge_ru           Georgian ("Russian" layout)
+   gr              Greek
+   gr_pl           Greek (polytonic)
+   guj             Gujarati
+   gur             Gurmukhi
+   hr              Croatian
+   hu              Hungarian
+   ie              Irish
+   il              Israeli
+   il_phonetic     Israeli (Phonetic)
+   ir              Iranian
+   is              Icelandic
+   it              Italian
+   iu              Inuktitut
+   jp              Japanese 106 keys
+   kan             Kannada
+   kr              Korean keyboard
+   la              Latin American
+   lao             Laotian
+   lt_b            Lithuanian "number row" QWERTY
+   lt              Lithuanian AZERTY (old)
+   lt_new          Lithuanian AZERTY (new)
+   lt_p            Lithuanian "phonetic" QWERTY
+   lv              Latvian
+   mal             Malayalam
+   mk              Macedonian
+   mm              Myanmar (Burmese)
+   mng             Mongolian (cyrillic)
+   mt              Maltese (UK)
+   mt_us           Maltese (US)
+   nl              Dutch
+   no              Norwegian
+   ori             Oriya
+   pl2             Polish (qwertz layout)
+   pl              Polish (qwerty layout)
+   pt              Portuguese
+   qc              Canadian (Quebec)
+   ro2             Romanian (qwertz)
+   ro              Romanian (qwerty)
+   ru              Russian
+   ru_yawerty      Russian (Phonetic)
+   sapmi           Saami (norwegian)
+   sapmi_sefi      Saami (swedish/finnish)
+   se              Swedish
+   si              Slovenian
+   sk_qwerty       Slovakian (QWERTY)
+   sk              Slovakian (QWERTZ)
+   sr              Serbian (cyrillic)
+   syr_p           Syriac (phonetic)
+   syr             Syriac
+   tel             Telugu
+   th              Thai keyboard
+   tj              Tajik keyboard
+   tml             Tamil (ISCII-layout)
+   tr_f            Turkish (traditional "F" model)
+   tr_q            Turkish (modern "Q" model)
+   tscii           Tamil (Typewriter-layout)
+   ua              Ukrainian
+   uk              UK keyboard
+   us_intl         US keyboard (international)
+   us              US keyboard
+   uz              Uzbek (cyrillic)
+   vn              Vietnamese "numeric row" QWERTY
+   yu              Yugoslavian (latin)
 
 
 Q: What are these lss images that isolinux can display? How do I
