--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,4 +1,4 @@
-# $Id: CHANGELOG,v 1.44 2003/10/06 05:29:22 jaco Exp $
+# $Id: CHANGELOG,v 1.45 2003/10/06 07:05:26 jaco Exp $
 
 * Mon, Oct 06, 2003, 0.5.6-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
@@ -66,6 +66,8 @@
         partition should have a "LIVECD.MNT" file in the root,
         with entry "mount=<mountpoint>". Only tested for
         "mount=/home" at present
+      - Initial support for SCSI host adapters
+      - Initial support for wireless network cards
     [linuxrc]:
       - Only make symlinks to /var/lib/{rpm,urpmi} directories, the
         rest are actual writables
