--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,6 +1,6 @@
-# $Id: CHANGELOG,v 1.45 2003/10/06 07:05:26 jaco Exp $
+# $Id: CHANGELOG,v 1.46 2003/10/06 14:57:50 jaco Exp $
 
-* Mon, Oct 06, 2003, 0.5.6-cvs
+* Mon, Oct 06, 2003, 0.5.6
   + Buchan Milne <bgmilne@cae.co.za>:
     [mklivecd]:
       - Fix rootdir to use the kernel/modules from the chroot
