--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,4 +1,4 @@
-# $Id: CHANGELOG,v 1.68 2003/11/05 12:51:18 jaco Exp $
+# $Id: CHANGELOG,v 1.69 2003/11/05 12:53:01 jaco Exp $
 
 * Wed, Nov 05, 2003, 0.5.7-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
@@ -58,8 +58,10 @@
       - Add --usbhome option to always use connected USB flash
         devices as a persistent home
       - Updated URL: http://livecd.berlios.de
+    [mklivecd.spec]:
+      - Updated URL: http://livecd.berlios.de
 
-
+      
 * Mon, Oct 06, 2003, 0.5.6
   + Buchan Milne <bgmilne@cae.co.za>:
     [mklivecd]:
