--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,4 +1,4 @@
-# $Id: CHANGELOG,v 1.69 2003/11/05 12:53:01 jaco Exp $
+# $Id: CHANGELOG,v 1.70 2003/11/12 05:05:51 jaco Exp $
 
 * Wed, Nov 05, 2003, 0.5.7-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
@@ -34,6 +34,9 @@
       - Detect USB Flash devices and mount them rw
       - s/LIVECD.MNT/.livecd.mnt/
       - Updated URL: http://livecd.berlios.de
+      - Fix ALSA by not loading sound modules, only adding them
+        to modules.conf (Reported and fix suggested by Texstar
+        <texstar@houston.rr.com>)
     [linuxrc]:
       - Allow for finding the cloop image on SCSI devices as well
         by probing with all the SCSI modules
