--- a/mklivecd/CHANGELOG
+++ b/mklivecd/CHANGELOG
@@ -1,4 +1,160 @@
-# $Id: CHANGELOG,v 1.155 2006/06/28 17:25:15 tom_kelly33 Exp $
+# $Id: CHANGELOG,v 1.156 2008/04/12 09:31:05 ikerekes Exp $
+* Sat Apr 12 2008 ikerekes
+- updated bootcodes README with the new bootcodes
+- fixed linuxrc parameter parsing with "fromusb" parameter
+
+* Mon Apr 7  2008 ikerekes
+- fixed bootfromiso code
+
+* Tue Apr 1  2008 ikerekes
+- linuxrc total overhaul of the $CDROM_LIST creation (to eliviate [h,s]d[a-t][0-99] problem)
+-         total overhaul of the fromusb code (not using load_usb and load_scsi any more, the probe-modules loads those modules)
+-         total overhaul of parameter parsing
+-         modified livecd= to specify the the cloop file name (as opposed to hard-coded livecd.sqfs) as per c-chan
+-         modified the bootfrom to read as bootfromiso= meaning only the iso name without the device portion
+-
+- rc.sysinit     eliminated changes= cheatcode, implemented changes_dev and changes_file instead
+-                the changes_dev is device independent (takes the LABEL= or UUID= mount code
+-                the changes_file (if specified) describes a loop mounted changes file (system)
+-                total overhaul of parameter parsing 
+
+* Mon Mar 31 2008 texstar
+- remove touch fstab/mtab
+- add requires drakx-installer-binaries-probe
+
+* Sun Mar 30 2008 ikerekes
+- first trial of including prob-modules
+
+* Fri Mar 29 2008 texstar
+- add requires to new module-init and libzlib1
+
+* 2008-01-18 add back BusLogic module
+             updated liveusb per Jeremiah
+
+* 2008-01-15 updated liveusb per Ivan
+
+* 2008-01-13 rc.sysinit "changes" patch per Ivan
+
+* 2008-01-12 updated liveusb per Ivan
+             added zenity percentage to mkchgsloop
+
+* 2008-01-07 add another alias to config_modprobeconf per Texstar
+             add mkchgsloop
+
+* 2007-12-27 add config_modprobeconf per Texstar
+             change mkremaster menu entry to Make LiveCD
+
+* 2007-12-02 improve sata drive search (extend beyond sd[a-b]
+             improve changes=loopfile (don't limit to ext2)
+
+* 2007-11-30 changes=loop_file_name bootfrom modification from Brian
+
+* 2007-10-22 more changes in mkremaster.in
+
+* 2007-10-22 i18n-framework from i18n team at mypclinuxos.com
+
+* 2007-10-18 remove BusLogic from modules.mk
+
+* 2007-10-08 mkremaster.in
+               more terminals for mklivecd
+
+* 2007-09-23 updated to work with both pclos and tinyme
+             mkremaster.in
+               changes for shutdown in livecd
+
+* 2007-09-17 updated mkremaster.in
+             added mkremaster menu entry in spec
+
+* 2007-08-19 corrected usb-storage and bootsplash per Ivan
+
+* 2007-08-17 more changes by Ivan
+
+* 2007-08-14 many changes by Ivan
+
+* 2007-08-06 bootfrom /dev/loop fix per Ivan
+
+* 2007-08-06 updated Modules.mk per Ivan
+
+* 2007-07-25 tweak Makefile and Rules.mk
+             added liveusb and mkremaster
+	     option to create iso's with 2 kernels
+
+* 2007-07-24 change the spec back for make rpm
+
+* 2007-07-20 some further insmod cleanups
+             tweak spec file a bit
+
+* 2007-07-20 fix insmod for new modules-init-tools-3
+
+* 2007-07-10 changes to use mdev or udevstart
+
+* 2007-07-08 changes for mdev (busybox mdev) - Thanks Gentoo
+
+* 2007-06-02 hwdetect.in
+                changes in nofinishinstall
+                removed "&" from config_*()
+
+* 2007-05-11 add VideoSafeModeFBDev and VideoSafeModeVesa
+             in mklivecd and hwdetect
+
+* 2007-05-11 change safe mode to use vesa driver instead of fbdev
+
+* 2007-05-06 hwdetect.in
+                added "&" to config_*(); to suppress verbose bootup warnings
+                remove duplicate "my $modules_conf" & "my %cmdline" entries
+	        remove "my $cdsymlinks" /etc/udev/scripts/cdsymlinks.sh deprecated?
+                fixed - mkdir_p("$prefix/etc/livecd/hwdetect/");
+             mklivecd.in
+                added /media$ to $nodirs
+             linuxrc.in
+                added mkdir -p /media
+
+* 2007-05-05 merge in sata changes to hwdetect per Ivan
+
+* 2007-05-03 changes for moved modules with kernel 2.6.20
+             removed 2.4 kernels modules
+             removed more unused code
+
+* 2007-04-30 merge in changes to hwdetect per Ivan
+
+* 2007-03-28 linuxrc.in
+                moved /dev/sd[a-b][0-99] first for usb per Nico
+                ramdisk size change from 1/3 to 1/2 per Nico
+
+* 2007-03-24 add changelog to spec file
+
+* 2007-03-06 suppress "bootsplash not found ..." warning
+             remove some unused code
+	     --ufs defaults to aufs
+	     
+* 2007-02-03 hwdetect.in
+	        changed back config_network();
+	     hwdetect-lang.in
+	        changed back 'network probe'
+
+* 2007-02-02 mklivecd.in
+		added more excluded files
+		change mkisofs to genisoimage
+		change blocksize to 224
+		change default bootloader back to iso
+		change label Framebuffer to VideoSafeMode in iso and grub
+	     hwdetect.in
+	        remove config_network();
+	     hwdetect-lang.in
+	        remove 'network probe'
+	     linuxrc.in
+	        moved "##Probe the scsi devices." section per Ivan
+	     Cleaned out some unused lines 
+		
+* 2006-12-27 added option --ufs to create livecd with unionfs or aufs
+	     added rc.sysinit.aufs.in
+	     rc.sysinit.in - create ifcfg-eth0
+	     hwdetect.in - Texstar's config_network fix
+	     mklivecd.in -
+		exclude files ifcfg-eth0, 61-*config.rules, and modprobe.conf
+	    	gfxboot changes
+		default to grub
+		
 * 2005-06-28 Out of Space error added
 * 2006-06-26 Grub updates, Brian Burns patches
 * 2006-04-22 added Ivan as author, various changes
@@ -9,7 +165,7 @@
              rc.sysinit.in - default use unionfs unless unionfs=no	
 
 * 2005-06-02 added sata_sis to the satalist in hwdetect as per Texstar request
-* 2005-06-01 applied Texstar’s fixes to hwdetect, to fix xres and MS wireless mouse not able to move the cursor 			sidewise
+* 2005-06-01 applied Texstarï¿½s fixes to hwdetect, to fix xres and MS wireless mouse not able to move the cursor 			sidewise
 
 * 2005-03-13 removed cdrom from modules list, shortened SATA 
 	     list in hwdetect
